--- a/HSrecomm_EDA.ipynb
+++ b/HSrecomm_EDA.ipynb
@@ -4381,7 +4381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv_p38",
    "language": "python",
    "name": "python3"
   },
@@ -4395,7 +4395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
