--- a/steps.ipynb
+++ b/steps.ipynb
@@ -84,7 +84,13 @@
     "\n",
     "Running manual pip install for torch for laptop GPU\n",
     "\n",
-    "> pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121"
+    "> pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Re-instalación por problemas con el GPU\n",
+    "\n",
+    "> pip install --force-reinstall torch==2.5.1 torchvision==0.20.1 torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cu121\n"
    ]
   },
   {
@@ -104,7 +110,7 @@
    "source": [
     "# --upgrade pip\n",
     "# pandas==2.0.3 # office\n",
-    "pandas==2.2.3 # home\n",
+    "pandedas==2.2.3 # home\n",
     "tqdm==4.67.1\n",
     "tabulate==0.9.0\n",
     "# matplotlib==3.7.5 # office\n",
