HSrecomm DistiltBERT HS04

--- a/steps.ipynb
+++ b/steps.ipynb
@@ -32,13 +32,15 @@
     "\n",
     "**No lo uso porque encuentro conflictos para ejecutar un .ipynb en VS Code con WSL**\n",
     "\n",
-    "python3.11 -m venv venv\n",
+    "python3.11 -m ~/.venv venv\n",
     "\n",
-    "source venv/bin/activate\n",
+    "source ~/.venv/bin/activate\n",
     "\n",
     "pip3 install --upgrade pip\n",
     "\n",
     "pip3 install -r requirements.txt\n",
+    "\n",
+    "pip3 install torch==2.3.0 --index-url https://download.pytorch.org/whl/cu121\n",
     "\n",
     "## CUDA\n",
     "\n",
@@ -64,7 +66,7 @@
     "\n",
     "1️⃣ Create the venv (using the Windows Python launcher)\n",
     "\n",
-    "> py -3.12 -m venv venv\n",
+    "> py -3 -m venv venv # 3.11\n",
     "\n",
     "2️⃣ Activate it\n",
     "\n",
@@ -84,7 +86,7 @@
     "\n",
     "Running manual pip install for torch for laptop GPU\n",
     "\n",
-    "> pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121\n",
+    "> pip install torch==2.5.1 --index-url https://download.pytorch.org/whl/cu121\n",
     "\n",
     "---\n",
     "\n",
