finetuned viz done

--- a/HSrecomm_DistiltBERT_HS04_error.ipynb
+++ b/HSrecomm_DistiltBERT_HS04_error.ipynb
@@ -15,22 +15,532 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training a DistiltBERT for classification"
+    "## Fine-tuned & Error analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies\n",
     "import os\n",
+    "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.graph_objects as go\n",
-    "from sklearn.decomposition import PCA\n",
+    "from sklearn.decomposition import PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fine-tuned model viz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model classes and embedding function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from transformers import DistilBertTokenizerFast, DistilBertModel\n",
+    "\n",
+    "class TokenizedDataset(Dataset):\n",
+    "    def __init__(self, encodings, labels):\n",
+    "        self.encodings = encodings\n",
+    "        self.labels = labels\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.labels)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return {\n",
+    "            'input_ids': self.encodings['input_ids'][idx],\n",
+    "            'attention_mask': self.encodings['attention_mask'][idx],\n",
+    "            'label': self.labels[idx]\n",
+    "        }\n",
+    "    \n",
+    "class HSClassifier(nn.Module):\n",
+    "    def __init__(self,\n",
+    "                 n_classes: int,\n",
+    "                 fine_tune: bool = False,\n",
+    "                 n_finetune_layers: int = 0):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "          n_classes:      number of target classes\n",
+    "          fine_tune:      if True, you’ll unfreeze either all or the last layers\n",
+    "          n_finetune_layers:\n",
+    "                          • =0 (default) → if fine_tune=True, unfreeze *all* DistilBERT layers  \n",
+    "                          • >0             → unfreeze only that many of the *last* transformer blocks  \n",
+    "                          • ignored if fine_tune=False (encoder stays fully frozen)\n",
+    "        \"\"\"\n",
+    "        super().__init__()\n",
+    "        self.distilbert = DistilBertModel.from_pretrained(\"distilbert-base-uncased\")\n",
+    "\n",
+    "        # Freeze everything by default\n",
+    "        for param in self.distilbert.parameters():\n",
+    "            param.requires_grad = False\n",
+    "\n",
+    "        # If fine_tune, decide what to unfreeze\n",
+    "        if fine_tune:\n",
+    "            if n_finetune_layers > 0:\n",
+    "                # Unfreeze only the last `n_finetune_layers` transformer blocks\n",
+    "                for block in self.distilbert.transformer.layer[-n_finetune_layers:]:\n",
+    "                    for param in block.parameters():\n",
+    "                        param.requires_grad = True\n",
+    "            else:\n",
+    "                # n_finetune_layers == 0 → unfreeze *all* DistilBERT params\n",
+    "                for param in self.distilbert.parameters():\n",
+    "                    param.requires_grad = True\n",
+    "\n",
+    "        # Classification head\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Linear(self.distilbert.config.hidden_size, 1024),\n",
+    "            nn.ReLU(),\n",
+    "            nn.BatchNorm1d(1024),\n",
+    "            nn.Dropout(0.3),\n",
+    "            nn.Linear(1024, n_classes),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, input_ids, attention_mask):\n",
+    "        outputs = self.distilbert(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "        hidden_state = outputs.last_hidden_state[:, 0, :]  # Take <CLS> token representation\n",
+    "        logits = self.classifier(hidden_state)\n",
+    "        return logits\n",
+    "    \n",
+    "class HSDataset(Dataset):\n",
+    "    def __init__(self, dataframe, tokenizer, desc_col='', label_col='', max_length=500):\n",
+    "        self.descriptions = dataframe[desc_col].tolist()\n",
+    "        self.labels = dataframe[label_col].tolist()\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.max_length = max_length\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.descriptions)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        encoding = self.tokenizer(\n",
+    "            self.descriptions[idx],\n",
+    "            add_special_tokens=True,\n",
+    "            max_length=self.max_length,\n",
+    "            padding='max_length',\n",
+    "            truncation=True,\n",
+    "            return_token_type_ids=False,\n",
+    "            return_attention_mask=True,\n",
+    "            return_tensors='pt'\n",
+    "        )\n",
+    "        item = {\n",
+    "            'input_ids': encoding['input_ids'].squeeze(0),\n",
+    "            'attention_mask': encoding['attention_mask'].squeeze(0),\n",
+    "            'label': self.labels[idx],\n",
+    "            'description': self.descriptions[idx]\n",
+    "        }\n",
+    "        return item\n",
+    "    \n",
+    "# Function to extract [CLS] embeddings\n",
+    "def get_embeddings(dataloader, model, device):\n",
+    "    all_embeds = []\n",
+    "    all_labels = []\n",
+    "    with torch.no_grad():\n",
+    "        for batch in dataloader:\n",
+    "            input_ids = batch['input_ids'].to(device)\n",
+    "            attn = batch['attention_mask'].to(device)\n",
+    "            outputs = model(input_ids=input_ids, attention_mask=attn)\n",
+    "            # DistilBERT does not have pooler; use first token hidden state\n",
+    "            cls_embeds = outputs.last_hidden_state[:, 0, :].cpu().numpy()\n",
+    "            all_embeds.append(cls_embeds)\n",
+    "            all_labels.extend(batch['label'])\n",
+    "    return np.vstack(all_embeds), np.array(all_labels)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Viz function with PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pca_viz_embs(embeds, labels, n_componets=2, title='',\n",
+    "                 legend_title='', html_output_file=''):\n",
+    "\n",
+    "    pca = PCA(n_components=n_componets)\n",
+    "    emb = pca.fit_transform(embeds)\n",
+    "\n",
+    "    fig = go.Figure()\n",
+    "    for chap in np.unique(labels):\n",
+    "        mask = labels == chap\n",
+    "        if n_componets==2:\n",
+    "            fig.add_trace(go.Scatter(\n",
+    "                x=emb[mask, 0],\n",
+    "                y=emb[mask, 1],\n",
+    "                mode='markers',\n",
+    "                name=chap,\n",
+    "                marker=dict(size=4),\n",
+    "                hovertext=[chap]*mask.sum(),\n",
+    "                hoverinfo='text'\n",
+    "            ))\n",
+    "        elif n_componets==3:\n",
+    "            fig.add_trace(go.Scatter3d(\n",
+    "                x=emb[mask, 0],\n",
+    "                y=emb[mask, 1],\n",
+    "                z=emb[mask, 2],\n",
+    "                mode='markers',\n",
+    "                name=chap,\n",
+    "                marker=dict(size=3),\n",
+    "                hovertext=[chap]*mask.sum(),\n",
+    "                hoverinfo='text'\n",
+    "            ))\n",
+    "        else:\n",
+    "            return \n",
+    "    if n_componets==2:\n",
+    "        scene = dict(\n",
+    "            xaxis_title=\"PC1\", yaxis_title=\"PC2\")\n",
+    "    elif n_componets==3:\n",
+    "        scene = dict(\n",
+    "            xaxis_title=\"PC1\", yaxis_title=\"PC2\", zaxis_title=\"PC3\")\n",
+    "    else:\n",
+    "        return \n",
+    "    fig.update_layout(\n",
+    "        title=title,\n",
+    "        scene=scene,\n",
+    "        legend_title=legend_title,\n",
+    "        width=1200, height=900\n",
+    "    )\n",
+    "    fig.write_html(html_output_file)\n",
+    "    print(f\"📄 Saved plot to {html_output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading finetuned model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\santt\\AppData\\Local\\Temp\\ipykernel_29228\\1868374554.py:18: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model_finetuned.load_state_dict(torch.load(model_save_path))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HSClassifier(\n",
+       "  (distilbert): DistilBertModel(\n",
+       "    (embeddings): Embeddings(\n",
+       "      (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
+       "      (position_embeddings): Embedding(512, 768)\n",
+       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "    (transformer): Transformer(\n",
+       "      (layer): ModuleList(\n",
+       "        (0-5): 6 x TransformerBlock(\n",
+       "          (attention): DistilBertSdpaAttention(\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          )\n",
+       "          (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "          (ffn): FFN(\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "            (activation): GELUActivation()\n",
+       "          )\n",
+       "          (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (classifier): Sequential(\n",
+       "    (0): Linear(in_features=768, out_features=1024, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): BatchNorm1d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (3): Dropout(p=0.3, inplace=False)\n",
+       "    (4): Linear(in_features=1024, out_features=1133, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reading labels\n",
+    "with open('models/labels_dict.json', 'r') as f:\n",
+    "    labels_dict = json.load(f)\n",
+    "\n",
+    "label2id = labels_dict['label2id']\n",
+    "id2label = labels_dict['id2label']\n",
+    "\n",
+    "# loading tokenizer\n",
+    "tokenizer = DistilBertTokenizerFast.from_pretrained(\"distilbert-base-uncased\")\n",
+    "\n",
+    "# loading model\n",
+    "model_name = 'distiltbert_hs04_simple_classifier_finetuned_3epochs_13062025_150328.pth'\n",
+    "\n",
+    "model_save_path = os.path.join('models', model_name)\n",
+    "\n",
+    "model_finetuned = HSClassifier(n_classes=len(label2id), fine_tune=True)\n",
+    "\n",
+    "model_finetuned.load_state_dict(torch.load(model_save_path))\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(f\"Using device: {device}\")\n",
+    "model_finetuned.to(device)\n",
+    "\n",
+    "model_finetuned.eval() # to set the model for inference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting embeddings from full finetune test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings shape: (13389, 768)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading the dataset\n",
+    "results_finetuned = pd.read_csv('results/hs04_distiltbert_finetuned_results.csv', index_col=0)\n",
+    "\n",
+    "# Getting chapter labels for viz\n",
+    "results_finetuned['True Chapter'] = results_finetuned['True Label'].astype(str).str[:2]\n",
+    "\n",
+    "# Build dataset and loader - sampled for viz comparison with EDA\n",
+    "ds = HSDataset(results_finetuned.sample(len(results_finetuned)//2), \n",
+    "               tokenizer, desc_col='Description', \n",
+    "               label_col='True Chapter', max_length=300)\n",
+    "\n",
+    "loader = DataLoader(ds, batch_size=32, shuffle=False)\n",
+    "\n",
+    "embeds, labels = get_embeddings(loader, model_finetuned.distilbert, device)\n",
+    "print(\"Embeddings shape:\", embeds.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Viz Good Description embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📄 Saved plot to embeddings_2d_goods_desc_finetuned.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "pca_viz_embs(embeds, labels, n_componets=2,\n",
+    "             title=\"Goods Description - 2D PCA of DistilBERT Finetuned Embeddings\",\n",
+    "             legend_title=\"HS02 Chapter\",\n",
+    "             html_output_file=\"embeddings_2d_goods_desc_finetuned.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📄 Saved plot to embeddings_3d_goods_desc_finetuned.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "pca_viz_embs(embeds, labels, n_componets=3,\n",
+    "             title=\"Goods Description - 3D PCA of DistilBERT Finetuned Embeddings\",\n",
+    "             legend_title=\"HS02 Chapter\",\n",
+    "             html_output_file=\"embeddings_3d_goods_desc_finetuned.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Viz embs from full_eng nomenclature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings shape: (6064, 768)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_hs06 = pd.read_csv('data/hs06_full_eng.csv', index_col='hs06', \n",
+    "                      dtype={'hs06': str, 'full_eng': str},\n",
+    "                      usecols=['hs06', 'full_eng'])\n",
+    "\n",
+    "# Getting chapter labels for viz\n",
+    "df_hs06['HS02'] = df_hs06.index.astype(str).str[:2]\n",
+    "\n",
+    "# Build dataset and loader - sampled for viz comparison with EDA\n",
+    "ds = HSDataset(df_hs06, \n",
+    "               tokenizer, desc_col='full_eng', \n",
+    "               label_col='HS02', max_length=300)\n",
+    "\n",
+    "loader = DataLoader(ds, batch_size=32, shuffle=False)\n",
+    "\n",
+    "embeds, labels = get_embeddings(loader, model_finetuned.distilbert, device)\n",
+    "print(\"Embeddings shape:\", embeds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📄 Saved plot to embeddings_3d_hs06_full_eng_finetuned.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "pca_viz_embs(embeds, labels, n_componets=3,\n",
+    "             title=\"HS06 full eng - 3D PCA of DistilBERT Finetuned Embeddings\",\n",
+    "             legend_title=\"HS02 Chapter\",\n",
+    "             html_output_file=\"embeddings_3d_hs06_full_eng_finetuned.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pre-processing test results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_transfer = pd.read_csv('results/hs04_distiltbert_transfer_results.csv')\n",
+    "results_finetuned_2 = pd.read_csv('results/hs04_distiltbert_finetuned_2layers_results.csv')\n",
+    "results_finetuned = pd.read_csv('results/hs04_distiltbert_finetuned_results.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merging with HS06 nomenclature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hs06 = pd.read_csv('data/hs06_full_eng.csv', index_col='hs06', \n",
+    "                      dtype={'hs06': str, 'full_eng': str},\n",
+    "                      usecols=['hs06', 'full_eng'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# top 5 rows in HS06 nomemclature\n",
+    "print(df_hs06.head(5).to_markdown(), \"\\n\")\n",
+    "\n",
+    "# bottom 5 rows in HS06 nomemclature\n",
+    "print(df_hs06.tail(5).to_markdown(), \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n"
    ]
   },
