--- a/HSrecomm_EDA.ipynb
+++ b/HSrecomm_EDA.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,6 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import plotly.graph_objects as go\n",
     "from sklearn.decomposition import PCA\n",
     "from transformers import DistilBertTokenizerFast, DistilBertModel\n",
@@ -4381,7 +4380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_p38",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -4395,7 +4394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
